[package]
name = "veil-gateway"
version = "0.3.0"
edition = "2024"
description = "Multi-gateway scoring and failover (Epic 141): aggregates static-config + mesh-discovered gateways, picks the preferred peer, hysteresis to avoid oscillation, integrates with NAT relay. Phase 6 extraction from veilcore."
license = "AGPL-3.0-or-later"

[dependencies]
veil-cfg = { path = "../veil-cfg" }
veil-proto = { path = "../veil-proto" }
veil-routing = { path = "../veil-routing" }
veil-util = { path = "../veil-util" }

log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
