[package]
name = "veil-invite"
version = "0.3.0"
edition = "2024"
description = "Invite-bundle format for out-of-band sharing of trusted-listener URIs.  CBOR + base32 + Ed25519 sig.  Used by `veil-cli invite create/accept`."
license = "AGPL-3.0-or-later"

[dependencies]
blake3 = "1.5"
ciborium = "0.2"
data-encoding = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
qrcode = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
rand = "0.9"
