[package]
name = "veil-local-transport"
version = "0.2.0"
edition = "2024"
description = "Shared listener / stream / token-handshake plumbing for the Veil node's two local protocols (admin and IPC). Provides a Unix-domain-socket-or-TCP-loopback listener with optional 32-byte token authentication, behind a single AsyncRead+AsyncWrite enum.  Phase 6.3 extraction from veilcore — zero veil-internal deps; usable by mobile-app IPC clients without dragging in DHT / transport / dispatcher."
license = "AGPL-3.0-or-later"

[dependencies]
veil-util = { path = "../veil-util" }

libc = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
tokio = { version = "1.42", features = ["sync", "rt", "macros", "time", "io-util", "net", "fs"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[lints]
workspace = true
